--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,32 +1,77 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8"/>
-	 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-		<script src="js/jquery-3.2.1.js"></script>
-	</head>
-	<body>
-		<nav aria-label="breadcrumb">
-		  <ol class="breadcrumb">
-		    <li class="breadcrumb-item active" aria-current="page">Login</li>
-		  </ol>
-		  <div id="cards"><p id="success1"></p></div>
-		</nav>
-		<div id="cards">
-			<div id = "cards-body">
-				<form>
-						<p><strong>ユーザIDを入力してください。</strong></p>
-						<input type="text" id="user_id" placeholder="message" required />
-						<p><strong>パスワードを入力してください。</strong></p>
-						<input type="text" id="password" placeholder="message" required />
-						<input type="button" id="send" value="ログイン" />
-				</form>
-			</div>
-		<script src="js/login.js"></script>
-			</div>
-		<a href="account.html">アカウント登録</a>
-	</body>
+<head>
+<meta charset="utf-8" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
+<script src="js/common.js"></script>
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+	integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+	crossorigin="anonymous" />
+<link rel="stylesheet" href="css/common.css" />
+<title>ログインページ</title>
+<script src="js/jquery-3.2.1.js"></script>
+<style>
+.font-size-1x {
+	font-size: 1rem;
+}
+
+.font-size-2x {
+	font-size: 2rem;
+}
+</style>
+</head>
+<body>
+	<script>
+		/*
+		 * ボタン処理がいらない場合は，第2引数を書かない
+		 * 例：initTemplate("みんなの投稿");
+		 */
+			$(document).ready(function(){
+				initTemplate("ログイン");
+			});
+	</script>
+	<main class="container-fluid">
+	<div class="card row col-md-12">
+		<div class="card-body">
+			<p>あなたの大切な思い出をみんなで共有しませんか？</p>
+			<p>位置情報付の写真をアップしてみんなで共有しよう!!</p>
+		</div>
+	</div>
+	<div id="cards">
+		<p id="success"></p>
+	</div>
+	<div class="row">
+		<div class="col">
+			<form>
+				<div class="form-group">
+					<label for="user_id">ユーザIDを入力してください</label> <input type="text"
+						class="form-control" id="user_id" placeholder="user_id">
+				</div>
+				<div class="form-group">
+					<label for="password">パスワードを入力してください</label> <input type="text"
+						class="form-control" id="password" placeholder="password">
+				</div>
+				<input class="btn btn-secondary float-right mb-1" type="button"
+					id="send" value="ログイン" />
+			</form>
+			<a class="font-size-1x" href="account.html">アカウント登録</a>
+			<script src="js/login.js"></script>
+		</div>
+	</div>
+</body>
 </html>
