login.htmlとaccount.htmlのmainのclassをcontainerに修正した

--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -45,7 +45,7 @@
 			initTemplate("アカウント登録");
 		});
 	</script>
-	<main class="container-fluid">
+	<main class="container">
 	<div class="row">
 		<div class="col">
 				<div id="cards">
