--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -45,7 +45,7 @@
 				initTemplate("ログイン");
 			});
 	</script>
-	<main class="container-fluid">
+	<main class="container">
 	<div class="card row col-md-12">
 		<div class="card-body">
 			<p>あなたの大切な思い出をみんなで共有しませんか？</p>
