--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -62,11 +62,11 @@
 						class="form-control" id="user_id" placeholder="ユーザID">
 				</div>
 					<div class="form-group">
-					<label for="password">パスワードを入力してください</label> <input type="text"
+					<label for="password">パスワードを入力してください</label> <input type="password"
 						class="form-control" id="password" placeholder="パスワード">
 				</div>
 				<div class="form-group">
-					<label for="password">もう一度パスワードを入力してください</label> <input type="text"
+					<label for="password">もう一度パスワードを入力してください</label> <input type="password"
 						class="form-control" id="password1" placeholder="パスワード再入力">
 				</div>
 				<input class="btn btn-secondary float-right mb-1" type="button"
