--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -63,7 +63,7 @@
 						class="form-control" id="user_id" placeholder="user_id">
 				</div>
 				<div class="form-group">
-					<label for="password">パスワードを入力してください</label> <input type="text"
+					<label for="password">パスワードを入力してください</label> <input type="password"
 						class="form-control" id="password" placeholder="password">
 				</div>
 				<input class="btn btn-secondary float-right mb-1" type="button"
