--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -74,10 +74,10 @@
             </div>
             <div class="row">
                 <div class="col card-footer">
-                    <button type="reset" id="reset-photo-button" class="btn btn-secondary">
+                    <button type="reset" id="reset-photo-button" class="btn btn-secondary" disabled>
                         <span class="fas fa-eraser"></span> リセット
                     </button>
-                    <button type="button" id="add-photo-button" class="btn btn-primary float-right">
+                    <button type="button" id="add-photo-button" class="btn btn-primary float-right" disabled>
                         <span class="fas fa-plus"></span> 追加
                     </button>
                 </div>
