位置情報の入力欄をボタンに変更

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -59,8 +59,9 @@
                             <label for="photo-taken-location" class="input-group-prepend input-group-text">
                                 <span class="fas fa-map-marker-alt" title="撮影場所" style="width:1rem"></span>
                             </label>
-                            <input type="text" id="photo-taken-location" class="form-control"
-                                   placeholder="xx.xxxx, xx.xxxx"/>
+                            <button type="button" id="photo-taken-location" class="form-control text-left">
+                                <span class="text-muted">タップして設定</span>
+                            </button>
                             <!-- TODO: 逆引きする？ -->
                         </p>
                     </div>
