add travelogue-list template

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,23 +25,18 @@
 			<!-- 旅行記サムネカード -->
 			<div id="travelogue-list">
 			</div>
-			<div class="card">
-				<div class="row">
-					<div class="col d-flex">
-						<div>
-							<img class="img-keep-ratio my-3" src="http://tn.smilevideo.jp/smile?i=24770287.L">
-						</div>
-						<div class="card-body">
-						 	<small class="text-muted">2018-09-18</small>
-						 	<h5 class="card-title">カードテンプレート</h5>
-						 	<p style="font-size: 0.8rem">
-						 		今日は眠たいです．
-							</p>
-						</div>
-					</div>
+			<div class="card"><div class="row"><div class="col d-flex">
+				<div>
+					<img class="img-keep-ratio my-3" src="http://tn.smilevideo.jp/smile?i=24770287.L">
 				</div>
-			</div>
-
+				<div class="card-body">
+				 	<small class="text-muted">2018-09-18</small>
+				 	<h5 class="card-title">カードテンプレート</h5>
+				 	<p style="font-size: 0.8rem">
+				 		今日は眠たいです．
+					</p>
+				</div>
+			</div></div></div>
 		</main>	
 	</body>
 	
