add js for omit description

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 		<script src="js/common.js"></script>
 		<link rel="stylesheet" href="css/common.css" />
 		<!-- 使いたいスクリプトを追加 -->
-		
+		<script src="js/toppage.js"></script>		
 	</head>
 	<body>
 		<script>
@@ -23,17 +23,20 @@
 		</script>
 		<main class="container">	
 			<!-- 旅行記サムネカード -->
-			<div id="travelogue-list">
+			<div id="travelogue-lists">
 			</div>
 			<div class="card"><div class="row"><div class="col d-flex">
 				<div>
-					<img class="img-keep-ratio my-3" src="http://tn.smilevideo.jp/smile?i=24770287.L">
+					<img class="img-keep-ratio my-4" src="http://tn.smilevideo.jp/smile?i=24770287.L">
 				</div>
 				<div class="card-body">
 				 	<small class="text-muted">2018-09-18</small>
 				 	<h5 class="card-title">カードテンプレート</h5>
 				 	<p style="font-size: 0.8rem">
 				 		今日は眠たいです．
+					</p>
+				 	<p class="float-right" style="font-size: 0.6rem">
+				 		by いちもん
 					</p>
 				</div>
 			</div></div></div>
