--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -93,7 +93,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">撮影場所を設定</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <button type="button" id="location-setting-modal-close-button" class="close" data-dismiss="modal" aria-label="close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -101,8 +101,8 @@
                     <div id="location-setting-map"></div>
                 </div>
                 <div class="modal-footer clearfix">
-                    <button type="reset" class="btn btn-secondary mr-auto">リセット</button>
-                    <button type="button" class="btn btn-primary">決定</button>
+                    <button type="reset" id="reset-location-button" class="btn btn-secondary mr-auto">リセット</button>
+                    <button type="button" id="select-location-button" class="btn btn-primary">決定</button>
                 </div>
             </div>
         </div>
