--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -44,23 +44,29 @@
                 <div class="photo-property-form col h-100 d-none">
                     <div class="w-100 m-auto">
                         <div class="input-group my-1">
-                            <label for="photo-taken-date" class="input-group-prepend input-group-text">
-                                <span class="fas fa-calendar-alt w-1rem" title="撮影日"></span>
-                            </label>
+                            <span for="photo-taken-date" class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <span class="fas fa-calendar-alt w-1rem" title="撮影日"></span>
+                                </span>
+                            </span>
                             <input type="date" id="photo-taken-date" class="form-control" value="2018-01-01"/>
                         </div>
                         <div class="input-group my-1">
-                            <label for="photo-taken-time" class="input-group-prepend input-group-text">
-                                <span class="fas fa-clock w-1rem" title="撮影時刻"></span>
-                            </label>
+                            <span for="photo-taken-time" class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <span class="fas fa-clock w-1rem" title="撮影時刻"></span>
+                                </span>
+                            </span>
                             <input type="time" id="photo-taken-time" class="form-control" value="12:00:00"/>
                         </div>
-                        <p class="input-group my-1">
-                            <label for="photo-taken-location" class="input-group-prepend input-group-text">
-                                <span class="fas fa-map-marker-alt w-1rem" title="撮影場所"></span>
-                            </label>
+                        <div class="input-group my-1">
+                            <span for="photo-taken-location" class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <span class="fas fa-map-marker-alt w-1rem" title="撮影場所"></span>
+                                </span>
+                            </span>
                             <button type="button" id="photo-taken-location" class="form-control text-left"></button>
-                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -88,7 +94,7 @@
         <div id="preview-map" class="card-body"></div>
     </div>
 
-    <div id="location-setting-modal" class="modal" tabindex="-1" role="dialog">
+    <div id="location-setting-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document" style="max-width: 80%">
             <div class="modal-content">
                 <div class="modal-header bg-light">
