--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -48,27 +48,27 @@
 	<main class="container">
 	<div class="row">
 		<div class="col">
-				<div id="cards">
-					<p id="success1"></p>
-				</div>
 			<form>
+				<p id="nameError"></p>
 				<div class="form-group">
 					<label for="name">名前を入力してください</label> <input type="text"
 						class="form-control" id="name" placeholder="名前">
 				</div>
-
+				<p id="idError"></p>
 				<div class="form-group">
-					<label for="user_id">ユーザIDを入力してください</label> <input type="text"
-						class="form-control" id="user_id" placeholder="ユーザID">
+					<label for="user_id">ログインIDを入力してください</label> <input type="text"
+						class="form-control" id="user_id" placeholder="ログインID">
 				</div>
 					<div class="form-group">
-					<label for="password">パスワードを入力してください</label> <input type="password"
+					<label for="password">パスワードを入力してください(5文字以上かつ大文字と小文字を含めてください)</label> <input type="password"
 						class="form-control" id="password" placeholder="パスワード">
 				</div>
+				<p id="passError"></p>
 				<div class="form-group">
-					<label for="password">もう一度パスワードを入力してください</label> <input type="password"
+					<label for="password1">もう一度パスワードを入力してください</label> <input type="password"
 						class="form-control" id="password1" placeholder="パスワード再入力">
 				</div>
+				<p id="success1"></p>
 				<input class="btn btn-secondary float-right mb-1" type="button"
 					id="send" value="アカウント登録" />
 			</form>
