--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -58,9 +58,10 @@
 	<div class="row">
 		<div class="col">
 			<form>
+				<p id="loginError"></p>
 				<div class="form-group">
-					<label for="user_id">ユーザIDを入力してください</label> <input type="text"
-						class="form-control" id="user_id" placeholder="user_id">
+					<label for="user_id">ログインIDを入力してください</label> <input type="text"
+						class="form-control" id="user_id" placeholder="ログインID">
 				</div>
 				<div class="form-group">
 					<label for="password">パスワードを入力してください</label> <input type="password"
