reforctoring missing div-tag

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 		</script>
 		<main class="container">	
 			<!-- 旅行記サムネカード -->
-			<div id="travelogue-lists">
+			<div id="travelogue-lists"></div>
 		</main>	
 	</body>
 	
