add footer-btn url by window.sessionStorage[access_token]

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 		 * 例：initTemplate("みんなの投稿");
 		 */
 			$(document).ready(function(){
-				initTemplate("みんなの投稿", "投稿", "post.html");
+				initTemplate("みんなの投稿", "投稿", changeFooterURL());
 			});
 		</script>
 		<main class="container">	
