撮影場所設定ダイアログの「元に戻す」はundoではないので「リセット」に変更

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -109,7 +109,7 @@
                 <div class="modal-footer bg-light clearfix">
                     <button type="reset" id="reset-location-button" class="btn btn-secondary mr-auto">
                         <span class="fas fa-undo w-1rem"></span>
-                        元に戻す
+                        リセット
                     </button>
                     <button type="button" id="select-location-button" class="btn btn-primary">
                         <span class="fas fa-map-marker-alt w-1rem"></span>
