アクセストークンをSessionStorageから取得するようにした

--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -123,8 +123,8 @@
 
 </main>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeH3QEuI3KqOwBkkjJ6nYe-jQBTWGDQdw&callback=initMap"
-        async defer></script>
+<div id="error-popup" class="fixed-top m-4" style="top: 3rem;"></div>
+
 </body>
 
 </html>
