--- a/src/main/webapp/post.html
+++ b/src/main/webapp/post.html
@@ -24,9 +24,9 @@
 <body>
 <main class="container-fluid">
 
-    <form class="form-group mb-4">
+    <div class="form-group mb-4">
         <input type="text" id="travelogue-title" class="form-control form-control-lg" placeholder="タイトル">
-    </form>
+    </div>
 
     <div id="photo-list" class="form-group mb-4">
         <div id="new-photo" class="card container-fluid mb-1">
