エラーメッセージをステータスコードに依存しない仕様に変更した。アカウント登録成功時の処理を実装した

--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -48,6 +48,7 @@
 	<main class="container">
 	<div class="row">
 		<div class="col">
+			<div id="success">
 			<form>
 				<p id="nameError"></p>
 				<div class="form-group">
@@ -69,9 +70,10 @@
 						class="form-control" id="password1" placeholder="パスワード再入力">
 				</div>
 				<p id="success1"></p>
-				<input class="btn btn-secondary float-right mb-1" type="button"
+				<input class="btn btn-primary float-right mb-1" type="button"
 					id="send" value="アカウント登録" />
 			</form>
+			</div>
 			<a class="font-size-1x" href="login.html">ログイン</a>
 			<script src="js/account.js"></script>
 		</div>
