--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -67,7 +67,7 @@
 					<label for="password">パスワードを入力してください</label> <input type="password"
 						class="form-control" id="password" placeholder="password">
 				</div>
-				<input class="btn btn-secondary float-right mb-1" type="button"
+				<input class="btn btn-primary float-right mb-1" type="button"
 					id="send" value="ログイン" />
 			</form>
 			<a class="font-size-1x" href="account.html">アカウント登録</a>
