fix photo-ratio and card-size on travelogue-list.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,8 @@
 		<script src="js/common.js"></script>
 		<link rel="stylesheet" href="css/common.css" />
 		<!-- 使いたいスクリプトを追加 -->
-		<script src="js/toppage.js"></script>		
+		<script src="js/toppage.js"></script>
+		<link rel="stylesheet" href="css/toppage.css" />		
 	</head>
 	<body>
 		<script>
