rename toppage.js css to index.js css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,8 +9,8 @@
 		<script src="js/common.js"></script>
 		<link rel="stylesheet" href="css/common.css" />
 		<!-- 使いたいスクリプトを追加 -->
-		<script src="js/toppage.js"></script>
-		<link rel="stylesheet" href="css/toppage.css" />		
+		<script src="js/index.js"></script>
+		<link rel="stylesheet" href="css/index.css" />		
 	</head>
 	<body>
 		<script>
