fix footer button url

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 		 * ボタン処理がいらない場合は，第2引数を書かない
 		 * 例：initTemplate("みんなの投稿");
 		 */
-		initTemplate("みんなの投稿", "投稿", changeFooterURL());
+		initTemplate("みんなの投稿", "投稿", "post.html");
 		</script>
 		<main class="container">	
 			<!-- 旅行記リスト -->
