--- a/src/main/webapp/travelogue.html
+++ b/src/main/webapp/travelogue.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 
-		<main class="container">
+		<main class="container-fluid">
 			<div class="card mb-4">
 				<div id="travel-title"></div>
 			</div>
