いいね機能を使えるように

--- a/src/main/webapp/travelogue.html
+++ b/src/main/webapp/travelogue.html
@@ -15,13 +15,14 @@
 	<body>
 
 		<main class="container-fluid">
-			<div class="card mb-4">
+			<div class="card mb-3">
 				<div id="travel-title"></div>
+				<div id="travel-likes"></div>
 			</div>
-			<div class="card mb-5">
+			<div class="card mb-4">
 				<div id="travel-map" class="card-body"></div>
 			</div>
-			<div class="card mb-4">
+			<div class="card mb-3">
 				<div id="travel-photos"></div>
 			</div>
 		</main>	
