--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,10 @@
 		<script src="js/jquery-3.2.1.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        	  integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
 		<script src="js/common.js"></script>
-		<link rel="stylesheet" href="css/common.css" />
+		<link rel="stylesheet" href="css/common.css" />		
 		<!-- 使いたいスクリプトを追加 -->
 		<script src="js/index.js"></script>
 		<link rel="stylesheet" href="css/index.css" />		
@@ -22,7 +24,7 @@
 		</script>
 		<main class="container">	
 			<!-- 旅行記リスト -->
-			<div id="travelogue-lists">	
+			<div id="travelogue-lists">
 				<!-- 旅行記読み込み中の表示 -->
 				<div class="progress">
 					<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
