google map apiの読み込みをheaderに書いた
debug用の変数を削除

--- a/src/main/webapp/travelogue.html
+++ b/src/main/webapp/travelogue.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/common.css" />
 
 		<script src="js/travelogue.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeH3QEuI3KqOwBkkjJ6nYe-jQBTWGDQdw&callback=initMap" async defer></script>
 		<title>旅行記の詳細</title>
 	</head>
 	<body>
