いいね画像にしてcardに余白を作成

--- a/src/main/webapp/travelogue.html
+++ b/src/main/webapp/travelogue.html
@@ -11,19 +11,20 @@
 
 		<script src="js/travelogue.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeH3QEuI3KqOwBkkjJ6nYe-jQBTWGDQdw&callback=initMap" async defer></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
 		<title>旅行記の詳細</title>
 	</head>
 	<body>
 
 		<main class="container-fluid">
-			<div class="card mb-3">
+			<div class="card mb-3 p-3">
 				<div id="travel-title"></div>
 				<div id="travel-likes"></div>
 			</div>
 			<div class="card mb-4">
 				<div id="travel-map" class="card-body"></div>
 			</div>
-			<div class="card mb-3">
+			<div class="card mb-3 p-2">
 				<div id="travel-photos"></div>
 			</div>
 		</main>	
