fix travelogue-lists size

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,7 @@
 		 */
 		initTemplate("みんなの投稿", "投稿", "post.html");
 		</script>
-		<main class="container">	
+		<main class="container-fuild mx-2">
 			<!-- 旅行記リスト -->
 			<div id="travelogue-lists">
 				<!-- 旅行記読み込み中の表示 -->
