--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 		<!-- 使いたいスクリプトを追加 -->
 		<script src="js/index.js"></script>
 		<link rel="stylesheet" href="css/index.css" />	
-	    <title>トップページ</title>	
+	    <title>Memoworld</title>	
 	</head>
 	<body>
 		<script>
